se hace code spitting de css base y nav

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,243 +1,12 @@
-@property --rotate {
-  syntax: "<angle>";
-  initial-value: 132deg;
-  inherits: false;
-}
+@import '_base.css';
+@import 'nav.css';
 
-:root{
-    --primary-color: #8ccff9;
-    --secondary-color: #f074fd;
-    --dark-color:#131e34;
-    --second-dark-color: #152238;
-    --bg-dark: #060d13;
-    --white: #eff3f8;
-}
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    color: var(--white);
-}
-html {
-  scroll-behavior: smooth;
-}
-body{
-    background-image: url("../images/background.png") !important;
-    font-family: Roboto;
-    max-width: 1420px;
-    margin: auto;
-    color: var(--white);
-}
-header {
-    height: 70px;
-    max-width: 1420px;
-    display: flex;
-    justify-content: space-around;
-    will-change: scroll-position;
-    transition: transform 0.7s linear;
-}
-header .navbar {
-    position: absolute;
-    top: 0;
-    left: -100vh;
-    bottom: 0;
-    margin: auto;
-    transition: all 0.7s ease-in-out;
-    z-index: 10;
-  }
-  header .navbar-brand {
-    width: 5rem;
-    object-fit: cover;
-    margin: 0.7rem 5rem;
-  }
-
-header .menu__list {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    width: 100vw;
-    background-color: var(--dark-color);
-    list-style: none;
-    justify-content: center;
-    align-items: center;
-    line-height: 5rem;
-}
-header .menu__list i {
-    color: var(--secondary-color);
-    margin:0 20px;
-}
-#btn-menu-2{
-    z-index: 1000;
-}
-.hidden {
-  display: none;
-}
-header .menu__list a {
-    text-decoration: none;
-    color: var(--primary-color);
-    font-size: 1.6rem;
-}
-header .menu__list a:hover {
-    color: var(--secondary-color);
-} 
-
-header .menu__list .nav-item {
-    align-content: left;
-    width: 90%;
-  }
-header i{
-    margin: auto;
-    margin-right: 5%;
-    font-size: 2.3rem;
-}
-header .is-active {
-    position: fixed;
-    left: 0;
-    opacity: 0.9;
-    transform: translateX(0px);
-    transition: all 0.3s linear;
-}
-
-.container-logo{
-    width: 350px;
-}
-header img{
-    height: auto;
-    width: 140px;
-    margin: 10px 0;
-    object-fit: cover;
-    animation: backInDown;
-    animation-duration: 1s;
-}
-i{
-    color: var(--primary-color);
-}
-header .menu__list a, header i{
-    text-shadow: 
-/*     0 0 5px rgba(0,178,255,1), */
-    0 0 8px rgba(0,178,255,1),
-    0 0 16px rgba(0,178,255,1),
-    0 0 32px rgba(38,104,127,1),
-    0 0 64px rgba(38,104,127,1),
-    0 0 72px rgba(38,104,127,1),
-    0 0 80px rgba(38,104,127,1),
-    0 0 100px rgba(38,104,127,1),
-    0 0 120px rgba(38,104,127,1);
-} 
-.nav-item i, .menu__list a:hover{
-    text-shadow: 
-/*     0 0 5px rgb(255, 0, 255), */
-    0 0 8px rgb(255, 0, 255),
-    0 0 16px rgb(247, 0, 255),
-    0 0 32px rgb(114, 38, 127),
-    0 0 64px rgb(117, 38, 127),
-    0 0 72px rgb(114, 38, 127),
-    0 0 80px rgb(106, 38, 127),
-    0 0 100px rgb(94, 38, 127),
-    0 0 120px rgb(117, 38, 127);
-}
-
-.toggle-cont {
-  position: relative;
-  display: block;
-  width: 100px;
-  height: 44px;
-  border: 3px solid #d29de7;
-  border-radius: 55px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  box-shadow: 0 0 0.2rem #fff, 0 0 0.1rem #fff, 0 0 1rem #bc13fe, 0 0 0.4rem #bc13fe, 0 0 1.8rem #bc13fe, inset 0 0 1.3rem #bc13fe;
-}
-
-.toggle {
-  display: block;
-  position: absolute;
-  height: 42px;
-  width: 42px;
-  border-radius: 100px;
-  transition: all 0.3s linear;
-}
-
-.toggle.dark {
-  left: 5px;
-  border: 3px solid #514141;
-  transform: scale(0);
-  opacity: 0;
-}
-
-.toggle.dark.active {
-  border: 3px solid #85128d;
-  box-shadow: 0 0 0.2rem #fff, 0 0 0.1rem #fff, 0 0 1rem #bc13fe, 0 0 0.4rem #85128d, 0 0 1.8rem #85128d, inset 0 0 1.3rem #85128d;
-  transform: scale(1);
-  opacity: 1;
-}
-
-.toggle.light {
-  right: 5px;
-  border: 3px solid #514141;
-  transform: scale(1.3);
-  opacity: 0;
-}
-
-.toggle.light.active {
-  transform: scale(1);
-  opacity: 1;
-  border: 3px solid #3effa7;
-  box-shadow: 0 0 0.2rem #fff, 0 0 0.1rem #fff, 0 0 1rem #bc13fe, 0 0 0.4rem #3effa7, 0 0 1.8rem #3effa7, inset 0 0 1.3rem #3effa7;
-}
-
-.lang {
-  padding-top: 8px;
-  padding-left: 2px;
-  font-weight: 700;
-  color: var(--primary-color);
-}
-.menu__desk, .switch__desktop{
-  display: none;
-}
-.btn-mobile{
-  position: fixed;
-  z-index: 100;
-  right: 20px;
-  top: 20px;
-}
-.btn-mobile i {
-  transition: opacity 0.3s ease-in-out;
-}
-main{
-    width: auto;
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    padding: 30px;
-    border-radius: 20px;
-}
-main h1 {
-    color: #FFFFFF;
-    text-align: center;
-    line-height: 2.9rem;
-    letter-spacing: 1px;
-    margin: auto;
-}
-h1 {
-    overflow: hidden; /* Ensures the content is not revealed until the animation */
-    border-right: .15em solid var(--primary-color); /* The typwriter cursor */
-    white-space: nowrap; /* Keeps the content on a single line */
-    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-    letter-spacing: .15em; /* Adjust as needed */
-}
-h1 span{
-    color: #CB0FFF;
-}
 .container__title{
   order: 2;
 }
-/* .container__typewriter p:not(:first-of-type) {
-  opacity: 0;
-} */
-.container__typewriter{
+
+.container__typewriter {
   height: 160px;
 }
 .container__typewriter p {
@@ -257,12 +26,7 @@ h1 span{
   white-space: nowrap;
   animation: typing 1s steps(20, end), blink-caret .5s step-end infinite;
 } 
-/* .container__typewriter p:last-child {
-  border-right: none;
-}
-.container__typewriter p span{
-  color: var(--primary-color);
-} */
+
 .container__typewriter p:nth-child(1){
   font-size: 1.3rem;
 }
@@ -310,7 +74,6 @@ h1 span{
   width: 300px;
   height: 300px;
   border-radius: 50%;
- /*  background-color: red; */
 }
 .circle1{
   top: -30px;
@@ -324,6 +87,7 @@ h1 span{
   margin-left: 25px;
   background-color: #00fff666;
   z-index: -2;
+  animation: pendulum 40s ease-in-out infinite;
 }
 
   .container__btn{
@@ -340,7 +104,7 @@ h1 span{
     font-weight: 700;
     border-radius: 1em;
     background-color: var(--dark-color);
-    text-shadow: 0 0 0.5em rgb(110,237, 237);
+/*     text-shadow: 0 0 0.5em rgb(110,237, 237); */
     box-shadow: rgb(0, 178, 255) 0px 0px 7px, 
                 rgb(0, 178, 255) 0px 0px 14px, 
                 rgb(38, 104, 127) 0px 0px 28px, 
@@ -362,7 +126,7 @@ h1 span{
 }
 .container__social-network{
   position: absolute;
-    top: 250px;
+    top: 200px;
     right: 0;
 }
 .buttons-container {
@@ -370,6 +134,7 @@ h1 span{
   justify-content: center;
   gap: 30px;
 }
+
 .buttons-container button,
 .swal2-confirm {
     width: 100px;  
@@ -419,7 +184,7 @@ section{
   margin-top: 5rem;
   padding: 1rem;
   text-align: justify;
-  max-width: 1080px;
+/*   max-width: 1080px; */
 }
 section h2{
   margin: 2.3rem;
@@ -437,7 +202,7 @@ section p{
   flex-direction: column;
 }
 .container__image-about{
-  width: 100%;
+  max-width: 420px;
 }
 .container__image-about img{
   width: -webkit-fill-available;
@@ -447,12 +212,27 @@ section p{
   border-radius: 20px;
   align-content: center;
 }
+.container-subs {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.container-subs div {
+  padding: 2rem;
+  background-color: var(--bg-dark);
+  border-radius: .5rem;
+}
 h3{
   color: var(--primary-color);
 }
 section svg{
   fill: var(--primary-color);
 /*   stroke: var(--dark-color); */
+}
+.hero, .container-subs, .container__categories, 
+form {
+  max-width: 1080px;
+  margin: auto;
 }
 .container__general {
   display: flex;
@@ -513,72 +293,88 @@ details[open] summary {
   padding: 0;
 }
 .container__project-cards{
-  margin: 30px 0;
-}
-.project-card{
-  background: #191c29;
-  width: 200px;
-  height: 300px;
-  padding: 3px;
-  position: relative;
-  border-radius: 6px;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
   display: flex;
-  font-size: 1.5em;
-  color: rgb(88 199 250 / 0%);
-  cursor: pointer;
-  font-family: cursive;
-    opacity: 0; 
-  transition: opacity 0.5s;
+  margin: 30px auto;
+  flex-wrap: wrap;
+  gap: 20px;
 }
-.project-card:hover{
-  color: rgb(88 199 250 / 100%);
-  transition: color 1s;
-  opacity: 1;
+.neon-box-blue {
+  box-shadow: 0 0 7px #0ff, 0 0 10px #0ff, 0 0 21px #0ff;
 }
+.neon-box-pink {
+  box-shadow: 0 0 7px #f0f, 0 0 10px #f0f, 0 0 21px #f0f;
+}
+.project-card {
+  position: relative;
+  width: 390px;
+  height: 280px;
+  margin: auto;
+}
+
 .card-content{
-  background: blue;
-  width: 100px;
-  height: 200px;
+  background: var(--dark-color);
+  width: 100%;
+  height: 100%;
+  border-radius: 0.5rem;
+  overflow: hidden;
+  position: relative;
+  transition: box-shadow 0.3s ease-in-out;
 }
- .project-card:hover::before .project-card:hover::after{
-  animation: none;
-  opacity: 1;
-} 
-.project-card::before{
-  content: "";
-  width: 104%;
-  height: 102%;
-  border-radius: 8px;
-  background-image: linear-gradient(
-    var(--rotate)
-    , #5ddcff, #3c67e3 43%, #4e00c2);
-  position: absolute;
-  z-index: -1;
-  top: -1%;
-  left: -2%;
-  animation: spin 2.5s linear infinite;
+.card-content:hover {
+  box-shadow: 0 0 7px #0ff, 0 0 10px #0ff, 0 0 21px #0ff;
 }
-.project-card::after{
+.card-content img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 0.5s ease-in-out;
+}
+.project-card:hover .card-content img {
+  transform: scale(1.2);
+}
+.card-glow {
   position: absolute;
-  content: "";
-  top: calc(var(--card-height) / 6);
+  top: 0;
   left: 0;
   right: 0;
-  z-index: -1;
   height: 100%;
-  width: 100%;
-  margin: 0 auto;
-  transform: scale(0.8);
-  filter: blur(calc(var(--card-height) / 6));
-  background-image: linear-gradient(
-    var(--rotate)
-    , #5ddcff, #3c67e3 43%, #4e00c2);
+  background: rgba(6, 13, 19, 0.7);
+  text-align: center;
+  align-content: center;
+  z-index: 10;
+  opacity: 0;
+  border-radius: 0.5rem;
+  transition: opacity 0.5s ease-in-out;
+  pointer-events: auto;
+}
+
+.project-card:hover .card-glow {
   opacity: 1;
-  transition: opacity .5s;
-  animation: spin 2.5s linear infinite;
+}
+.tags-container {
+  display: flex;
+  justify-content: space-evenly;
+}
+.tag {
+  background-color: var(--dark-color);
+  padding: 5px 7px;
+  font-size: small;
+  font-weight: 700;
+  color: hsl(var(--pink-hsl));
+  border-radius: 0.5rem;
+}
+.card-icons {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+  gap: 20px;
+  z-index: 20;
+}
+.card-icons a i {
+  color: var(--neon-blue);
+  font-size: 27px;
+  cursor: pointer;
 }
 
 input::-moz-focus-inner {
@@ -686,7 +482,7 @@ input[type="submit"]:disabled{
   -webkit-justify-content: center;
   -ms-justify-content: center;
   text-align: center;
-  margin-top: 40px;
+  margin: 40px 0;
 }
 .box-player{
 	height: 35vh;
@@ -698,47 +494,28 @@ input[type="submit"]:disabled{
 	padding: 5px 0;
 	box-shadow: 0 0 8px #47D3E5, 0 0 16px #47D3E5, 0 0 24px #47D3E5;
 }
-@keyframes spin {
+/* @keyframes spin {
   0% {
     --rotate: 0deg;
   }
   100% {
     --rotate: 360deg;
   }
-}
+} */
 
 footer{
   height: 250px;
   color: var(--second-dark-color);
 }
-.project-card:hover {
- /*  position: absolute; */
-  content: "";
-  top: 50px;
-  left: 0;
-  right: 0;
-  z-index: -1;
-/*   height: 100%;
-  width: 100%; */
-  margin: 0 auto;
-  transform: scale(0.8);
-  filter: blur(calc(100px / 6));
-/*   border: 12px solid radial-gradient(
-/*     var(--rotate) 
-     #5ddcff, #3c67e3, #4e00c2); */
-    opacity: 1;
-  transition: opacity .5s;
-  animation: spin 2.5s linear infinite;
-}
 
-@keyframes spin {
+/* @keyframes spin {
   0% {
     --rotate: 0deg;
   }
   100% {
     --rotate: 360deg;
   }
-}
+} */
 .board {
   display: grid;
   grid-template-columns: repeat(3, 100px);
@@ -824,9 +601,9 @@ button {
   cursor: pointer;
   transition: background 0.3s;
 }
-button:hover {
+/* button:hover {
   background: #ff6b81;
-}
+} */
 
 @keyframes fadeInLeft {
   from {
@@ -847,6 +624,18 @@ button:hover {
   to {
       opacity: 1;
       transform: translateX(0);
+  }
+}
+
+@keyframes pendulum {
+  0% {
+      transform: translateX(-100px);
+  }
+  50% {
+      transform: translateX(100px);
+  }
+  100% {
+      transform: translateX(-100px);
   }
 }
 
@@ -968,9 +757,13 @@ button:hover {
     }
     .hero{
       flex-direction: row;
+      margin-bottom: 20px;
     }
-    .container__image-about, .container__text-about{
-      width: 50%;
+    .container__text-about{
+      padding: 2rem;
+    }
+    .container-subs {
+      flex-direction: row;
     }
     section {
       position: relative;
