--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -183,13 +183,12 @@ section{
   margin: auto;
   margin-top: 5rem;
   padding: 1rem;
-  text-align: justify;
 /*   max-width: 1080px; */
 }
 section h2{
   margin: 2.3rem;
   color: #ff117888;
-  font-size: 2.3rem;
+  font-size: 3.6rem;
   text-shadow: 0 0 var(--secondary-color);
 }
 section p{
@@ -308,6 +307,7 @@ details[open] summary {
   position: relative;
   width: 390px;
   height: 280px;
+  border-radius: 0.5rem;
   margin: auto;
 }
 
@@ -320,7 +320,7 @@ details[open] summary {
   position: relative;
   transition: box-shadow 0.3s ease-in-out;
 }
-.card-content:hover {
+.project-card:hover {
   box-shadow: 0 0 7px #0ff, 0 0 10px #0ff, 0 0 21px #0ff;
 }
 .card-content img {
@@ -418,6 +418,7 @@ input[type="text"],
 		height: 2.75rem;
 		color:#ffffff;
     background-color: var(--second-dark-color);
+    font-size: 1.1rem;
 	}
 
 	textarea {
