--- a/index.bundle.css
+++ b/index.bundle.css
@@ -101,6 +101,67 @@ h1 span {
     display: none;
 }
 
+/* @keyframes fadeInLeft {
+    from {
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+  } */
+
+  @keyframes fadeInLeft {
+    from {
+      opacity: 0;
+      -webkit-transform: translate3d(-100%, 0, 0);
+      transform: translate3d(-100%, 0, 0);
+    }
+  
+    to {
+      opacity: 1;
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+    }
+  }
+/*   
+  @keyframes fadeInRight {
+    from {
+        opacity: 0;
+        transform: translateX(100px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+  } */
+
+  @keyframes fadeInRight {
+    from {
+      opacity: 0;
+      -webkit-transform: translate3d(100%, 0, 0);
+      transform: translate3d(100%, 0, 0);
+    }
+  
+    to {
+      opacity: 1;
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+    }
+  }
+  
+  @keyframes pendulum {
+    0% {
+        transform: translateX(-100px);
+    }
+    50% {
+        transform: translateX(100px);
+    }
+    100% {
+        transform: translateX(-100px);
+    }
+  }
 header .navbar {
     position: absolute;
     top: 0;
@@ -311,7 +372,7 @@ header i {
     margin: auto;
     overflow: hidden;
     white-space: nowrap;
-    animation: typing 1s steps(20, end), blink-caret .5s step-end infinite;
+/*     animation: typing 1s steps(20, end), blink-caret .5s step-end infinite; */
   } 
   
   .container__typewriter p:nth-child(1){
@@ -323,7 +384,7 @@ header i {
     line-height: 2.5rem;
   }
   .container__typewriter p:nth-child(3){
-    font-size: 1.3rem;
+    font-size: 1.7rem;
   }
   .container__typewriter p:nth-child(4){
     font-size: 1.3rem;
@@ -955,6 +1016,7 @@ header i {
   .footer-container {
     text-align: center;
     line-height: 1.8rem;
+    font-weight: 700;
   }
   .footer-social {
     display: flex;
@@ -1035,7 +1097,7 @@ header i {
       line-height: 5rem;
     }
     .container__typewriter p:nth-child(3){
-      font-size: 2.9rem;
+      font-size: 3.1rem;
     }
     .container__typewriter p:nth-child(4){
       font-size: 2.4rem;
@@ -1081,8 +1143,8 @@ header i {
       ;
       width: 680px;
     }
-    .container__btn{
-      margin-top: 10rem;
+    .container__btn {
+      margin-top: 11rem;
       display: flex;
       flex-direction: row;
       justify-content: space-evenly;
